syntax = "proto3";

option go_package = "../gen;coursev1";

import "google/protobuf/empty.proto";

service CourseService {
    rpc GetAll(google.protobuf.Empty) returns (GetResponse); 
    rpc Create(CreateResponse) returns (SuccessResponse);
}


message CreateLesson {
    string title = 1; 
    string type = 2;
    int32 duration = 3; 
    string content = 4; 
    string practice_type = 5;  
    string task = 6; 
}

message CreateTheme {
    string title = 1; 
    repeated CreateLesson lessons = 2; 
}

message CreateResponse {
    string title = 1;  
    string description = 2;  
    string full_description = 3;  
    string work = 4;  
    string difficulty = 5; 
    int32 duration = 6;  
    string image = 7;
    repeated CreateTheme themes = 8;  
}

message Course {
    int32 id = 1;
    string title = 2;  
    string description = 3;  
    string full_description = 4;  
    string work = 5;  
    string difficulty = 6; 
    int32 duration = 7;  
    string image = 8;
}

message GetResponse {
    repeated Course courses = 1;
}

message SuccessResponse {
    bool success = 1;  
}
